--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://archiltavdgiridze.github.io/movie-site/",
+  "homepage": "https://archiltavdgiridze.github.io/MovieHub/",
   "name": "movie-site",
   "version": "0.1.0",
   "private": true,
