--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
